--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <!-- Position the Blue Box Model on the marker and scale it down -->
     <a-box scale="0.75 0.75 0.75" color="blue"></a-box>
 
-    <!-- Position the SafeGuard Boundary Model behind and below the image marker -->
+    <!-- Position the SafeGuard Boundary Model behind and below the marker -->
     <!-- Rotate the SafeGuard Boundary and scale it down -->
     <a-entity rotation="0 0 90" position="2 0 -25" scale="0.03 0.03 0.03">
         <a-obj-model src="#Fence_obj" mtl="#Fence_mtl"></a-obj-model>
