--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   xrextras-loading
   xrextras-runtime-error>
 
-  <!-- Load all of the models and animations needed in the scene -->
+  <!-- Import and label all of the custom 3D objects needed in the scene -->
   <a-assets>
 
     <!-- Load the .glb file for the Sand Castle Model by specifying the path -->
